Refactor AST nodes, add unary and binary ops and operations and INumber Fixes #41

--- a/DialogLang.csproj
+++ b/DialogLang.csproj
@@ -6,6 +6,8 @@
     <Nullable>enable</Nullable>
     <LangVersion>9.0</LangVersion>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
